--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
+    "@babel/plugin-transform-runtime": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@babel/runtime": "^7.17.9",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^7.2.0",
@@ -40,11 +43,14 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
+    "node-sass": "^7.0.1",
     "prettier": "^2.6.2",
     "react-refresh": "^0.13.0",
+    "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.4",
     "webpack": "^5.72.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1",
     "webpack-merge": "^5.8.0"
@@ -62,5 +68,4 @@
       "prettier --write"
     ]
   }
-
 }
